# dockerfile_ai

./: .gitignore  CLAUDE.md  LICENSE  MCP_SERVER.md  README.md  SECURITY.md  pyproject.toml
ai/prompts/: v1  v2
example/: bad_dockerfile
src/dockerfile_ai/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  mcp_server.py  prompts.py  resilience.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exceptions.py  test_logging.py  test_prompts.py  test_resilience.py
